LU-5816 Recovery: not treated blocked during waiting sth

in target_recovery_thread, the process should not be considered
to be "blocked state" if it was waiting something to happen,
e.g. the connections from all clients.

Change-Id: Ic1ad4dce1df974dd99e0b28cee211de173d178e5
Signed-off-by: Hongchao Zhang <hongchao.zhang@intel.com>